<?xml version="1.0"?>
<package format="2">
  <name>project</name>
  <version>0.0.0</version>
  <description>es01</description>
  <maintainer email="nicola@todo.todo">nicola</maintainer>
  <license>TODO</license>

  <!-- pacchetti di sistema (sempre catkin) -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- pacchetti necessari direttamente -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- pacchetti necessari indirettamente (in files.cpp) -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <!-- pacchetti necessari in runtime -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <!-- informazioni aggiuntive -->
  </export>


</package>
